mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_invalid_field_decl.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_invalid_field_decl.mux`
error: 2 errors found

error: Expected field name
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_invalid_field_decl.mux:3:8
   |
 3 |     int
   |        ^

error: Expected expression, found '}'
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_invalid_field_decl.mux:4:1
   |
 4 | }
   | ^
